# text-classifier

./: README.md  pyproject.toml
.ipynb_checkpoints/: classifier-checkpoint.ipynb
sentiment labelled sentences/: README.md
